--- a/www/views/about.html
+++ b/www/views/about.html
@@ -32,26 +32,39 @@
 	</div>
 </div>
 <!-- Skills -->
-<div class="row"  id="skills">
-	<div class="row texthold">
-		<div class="col-sm-4">
-			<div class="bigme"></div>
+<div class="row" id="skills">
+	<div class="row skills">
+		<div class="col-sm-5">
+			<div class="selected" id="creative">
+				<h1>Creative</h1>
+			</div>
 		</div>
-		<div class="col-sm-6">
-			<div class="row">
-				<div id="text1" class="textcontain">
-					Welcome to my site. 
+		<div class="col-sm-5 col-sm-offset-2">
+			<div  id="technical">
+				<h1>Technical</h1>
+			</div>
+		</div>
+	</div>
+	<div id="technicalskills">
+		<div class="row">
+			<div class="skillrow1">
+				<div id="illustrator" class="skillcircle">
+				</div>
+				<div id="sketch" class="skillcircle">
+				</div>
+				<div id="photoshop" class="skillcircle">
+				</div>
+				<div id="lucid" class="skillcircle">
 				</div>
 			</div>
-			<div class="row">
-				<div id="text2" class="textcontain">
-					I&#39;m a Front-End Developer, 
-					UI/UX Designer and Web Analytics Guru.
+		</div>
+		<div class="row">
+			<div class="skillrow2">
+				<div id="balsamiq" class="skillcircle">
 				</div>
-			</div>
-			<div class="row">
-				<div id="text3" class="textcontain">
-					Click below to see my to learn more about me or click to menu button to skip to specific sections.
+				<div id="invision" class="skillcircle">
+				</div>
+				<div id="indesign" class="skillcircle">
 				</div>
 			</div>
 		</div>
