--- a/www/views/about.html
+++ b/www/views/about.html
@@ -35,26 +35,26 @@
 <div class="row" id="skills">
 	<div class="row skills">
 		<div class="col-sm-5">
-			<div class="selected" id="creative">
+			<div ng-click="creativeOpen();" class="selected" id="creative">
 				<h1>Creative</h1>
 			</div>
 		</div>
 		<div class="col-sm-5 col-sm-offset-2">
-			<div  id="technical">
+			<div ng-click="technicalOpen()" id="technical">
 				<h1>Technical</h1>
 			</div>
 		</div>
 	</div>
-	<div id="technicalskills">
+	<div id="creativeskills">
 		<div class="row">
 			<div class="skillrow1">
-				<div id="illustrator" class="skillcircle">
+				<div id="illustrator" class="skillcircle creativeopen">
 				</div>
-				<div id="sketch" class="skillcircle">
+				<div id="sketch" class="skillcircle creativeopen">
 				</div>
-				<div id="photoshop" class="skillcircle">
+				<div id="photoshop" class="skillcircle creativeopen">
 				</div>
-				<div id="lucid" class="skillcircle">
+				<div id="lucid" class="skillcircle creativeopen">
 				</div>
 			</div>
 		</div>
@@ -65,6 +65,34 @@
 				<div id="invision" class="skillcircle">
 				</div>
 				<div id="indesign" class="skillcircle">
+				</div>
+			</div>
+		</div>
+	</div>
+	<div id="technicalskills">
+		<div class="row">
+			<div class="skillrow3">
+				<div id="html" class="skillcircle">
+				</div>
+				<div id="css" class="skillcircle">
+				</div>
+				<div id="bootstrap" class="skillcircle">
+				</div>
+				<div id="javascript" class="skillcircle">
+				</div>
+				<div id="jquery" class="skillcircle">
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="skillrow4">
+				<div id="less" class="skillcircle">
+				</div>
+				<div id="docker" class="skillcircle">
+				</div>
+				<div id="git" class="skillcircle">
+				</div>
+				<div id="angular" class="skillcircle">
 				</div>
 			</div>
 		</div>
