creative graph animate in done

--- a/www/views/about.html
+++ b/www/views/about.html
@@ -32,7 +32,7 @@
 	</div>
 </div>
 <!-- Skills -->
-<div class="row" id="skills">
+<div class="row " id="skills">
 	<div class="row skills">
 		<div class="col-sm-5">
 			<div ng-click="creativeOpen();" class="selected" id="creative">
@@ -45,27 +45,101 @@
 			</div>
 		</div>
 	</div>
-	<div id="creativeskills">
-		<div class="row">
-			<div class="skillrow1">
-				<div id="illustrator" class="skillcircle creativeopen">
-				</div>
-				<div id="sketch" class="skillcircle creativeopen">
-				</div>
-				<div id="photoshop" class="skillcircle creativeopen">
-				</div>
-				<div id="lucid" class="skillcircle creativeopen">
+	<div class="row" id="creativeskills">
+		<div class="col-sm-2 col-sm-offset-1">
+			<div class="xytext">
+				<div id="creativexy" class="ytext">
+					Creative Skills
 				</div>
 			</div>
 		</div>
-		<div class="row">
-			<div class="skillrow2">
-				<div id="balsamiq" class="skillcircle">
+		<div id="skillcontain" class="col-sm-7">
+			<div id="creativecirlcecontain">
+				<div class="row">
+					<div class="skillrow1">
+						<div id="illustrator" class="skillcircle creativeopen">
+						</div>
+						<div id="sketch" class="skillcircle creativeopen">
+						</div>
+						<div id="photoshop" class="skillcircle creativeopen">
+						</div>
+						<div id="lucid" class="skillcircle creativeopen">
+						</div>
+					</div>	
 				</div>
-				<div id="invision" class="skillcircle">
+				<div class="row">
+					<div class="skillrow2">
+						<div id="balsamiq" class="skillcircle">
+						</div>
+						<div id="invision" class="skillcircle">
+						</div>
+						<div id="indesign" class="skillcircle">
+						</div>
+					</div>
 				</div>
-				<div id="indesign" class="skillcircle">
+			</div>
+			<div id="creativegraph">
+				<div class="row">
+					<div class="col-sm-12 padding0">
+						<div class="barcontain">
+							<div id="invisiongraph" class="barclosed bar">
+								<div class="creativebartext">
+									InvisionApp
+								</div>
+							</div>
+						</div>
+						<div class="barcontain">
+							<div id="indesigngraph" class="barclosed bar">
+								<div class="creativebartext">
+									InDesign
+								</div>
+							</div>
+						</div>
+						<div class="barcontain">
+							<div id="lucidgraph" class="barclosed bar">
+								<div class="creativebartext">
+									Lucid Charts
+								</div>
+							</div>
+						</div>
+						<div class="barcontain">
+							<div id="balsamiqgraph" class="barclosed bar">
+								<div class="creativebartext">
+									Balsamiq
+								</div>
+							</div>
+						</div>
+						<div class="barcontain">
+							<div id="sketchgraph" class="barclosed bar">
+								<div class="creativebartext">
+									Sketch 3
+								</div>
+							</div>
+						</div>
+						<div  class="barcontain">
+							<div id="illustratorgraph" class="barclosed bar">
+								<div class="creativebartext">
+									Illustrator
+								</div>
+							</div>
+						</div>
+						<div class="barcontain">
+							<div id="photoshopgraph" class="barclosed bar">
+								<div class="creativebartext">
+									Photoshop
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
+			</div>
+			<div id="graphbottom"></div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="xytext">
+			<div id="creativexy" class="xtext">
+				Experience Level
 			</div>
 		</div>
 	</div>
