--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -85,6 +85,11 @@ button{
 	background: none;
 	border: none;
 }
+.center{
+	margin-left: auto!important;
+	float: none !important;
+	margin-right: auto!important;
+}
 .row{
 	margin: 0px;
 }
@@ -257,6 +262,10 @@ button{
 	margin-top: 50px;
 }
 /*SKILLS*/
+#skillcontain{
+	margin-top: 45px;
+	padding-left: 0px;
+}
 #skills {
 	position: absolute;
 	top:600px;
@@ -379,7 +388,6 @@ button{
 	width: 440px;
 	margin-left: auto;
 	margin-right: auto;
-	margin-top: 30px;
 }
 .skillrow2 {
 	width: 332px;
@@ -391,13 +399,143 @@ button{
 	width: 550px;
 	margin-left: auto;
 	margin-right: auto;
-	margin-top: 30px;
 }
 .skillrow4 {
 	width: 440px;
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 5px;
+}
+#creativegraph{
+	display: none;
+}
+.barclosed{
+	height:20px;
+	width: 0%!important;
+	-webkit-transition: all 600ms ease;
+	-moz-transition: all 600ms ease;
+	-o-transition: all 600ms ease;
+	-ms-transition: all 600ms ease;
+	transition: all 600ms ease;
+}
+.bar{
+	height: 27px;
+  	padding-top: 2px;
+	-webkit-transition: all 600ms ease;
+	-moz-transition: all 600ms ease;
+	-o-transition: all 600ms ease;
+	-ms-transition: all 600ms ease;
+	transition: all 600ms ease;
+
+}
+#illustratorgraph{
+	width: 91%;
+	background-color: #129DDC;
+	-webkit-transition: all 600ms ease;
+	-moz-transition: all 600ms ease;
+	-o-transition: all 600ms ease;
+	-ms-transition: all 600ms ease;
+	transition: all 600ms ease;
+}
+#sketchgraph{
+	width:82%;
+	background-color: #28A5DE;
+	-webkit-transition: all 600ms ease;
+	-moz-transition: all 600ms ease;
+	-o-transition: all 600ms ease;
+	-ms-transition: all 600ms ease;
+	transition: all 600ms ease;
+}
+#photoshopgraph{
+	width: 98%;
+	background-color: #0496D7;
+	-webkit-transition: all 600ms ease;
+	-moz-transition: all 600ms ease;
+	-o-transition: all 600ms ease;
+	-ms-transition: all 600ms ease;
+	transition: all 600ms ease;
+}
+#lucidgraph{
+	width:64%;
+	background-color: #51B7E5;
+	
+	-webkit-transition: all 600ms ease;
+	-moz-transition: all 600ms ease;
+	-o-transition: all 600ms ease;
+	-ms-transition: all 600ms ease;
+	transition: all 600ms ease;
+}
+#balsamiqgraph{
+	width: 71%;
+	background-color: #36ACE1;
+	-webkit-transition: all 600ms ease;
+	-moz-transition: all 600ms ease;
+	-o-transition: all 600ms ease;
+	-ms-transition: all 600ms ease;
+	transition: all 600ms ease;
+}
+#invisiongraph{
+	width: 46%;
+	background-color: #80C9EA;
+	-webkit-transition: all 600ms ease;
+	-moz-transition: all 600ms ease;
+	-o-transition: all 600ms ease;
+	-ms-transition: all 600ms ease;
+	transition: all 600ms ease;
+}
+#indesigngraph{
+	width: 55%;
+	background-color: #68C0E7;
+	-webkit-transition: all 600ms ease;
+	-moz-transition: all 600ms ease;
+	-o-transition: all 600ms ease;
+	-ms-transition: all 600ms ease;
+	transition: all 600ms ease;
+}
+.barcontain{
+	width:100%;
+	float: left;
+	height: auto;
+	margin-bottom:5px;
+}
+.creativebartext {
+	color: #fff;
+	font-size: 14px;
+	font-family: ssp;
+	width: 95%;
+	text-align: right;
+	font-weight: 500;
+	margin-top: 1px;
+	display: none;
+}
+.graphholder {
+	border-left: 3px solid #FFF;
+	height: 280px;
+	-webkit-transition: all 600ms ease;
+	-moz-transition: all 600ms ease;
+	-o-transition: all 600ms ease;
+	-ms-transition: all 600ms ease;
+	transition: all 600ms ease;
+}
+#creativegraph{
+	padding-top: 52px;
+}
+.go {
+	width:100% !important;
+	-webkit-transition: all 600ms ease;
+	-moz-transition: all 600ms ease;
+	-o-transition: all 600ms ease;
+	-ms-transition: all 600ms ease;
+	transition: all 600ms ease;
+}
+#graphbottom{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0%;
+    height: 3px;
+    background: #fff;
+    transition: all 0.6s;
 }
 /*INTRO*/
 .aboutsection{
@@ -443,6 +581,23 @@ button{
 	-o-transition: all 600ms ease;
 	-ms-transition: all 600ms ease;
 	transition: all 600ms ease;
+}
+.xtext{
+	width: 100%;
+	font-family: ssp;
+	text-align: center;
+	font-size: 22px;
+	margin-top: 10px;
+}
+.ytext{
+	width: 95%;
+	font-family: ssp;
+	text-align: right;
+	font-size: 22px;
+	margin-top: 160px;
+}
+.xytext{
+	display: none;
 }
 #text1 {
 	top:500px;
