--- a/www/views/about.html
+++ b/www/views/about.html
@@ -53,7 +53,7 @@
 				</div>
 			</div>
 		</div>
-		<div id="skillcontain" class="col-sm-7">
+		<div id="skillcontain" class="col-sm-6 padding0">
 			<div id="creativecirlcecontain">
 				<div class="row">
 					<div class="skillrow1">
@@ -82,49 +82,49 @@
 				<div class="row">
 					<div class="col-sm-12 padding0">
 						<div class="barcontain">
-							<div id="invisiongraph" class="barclosed bar">
+							<div id="invisiongraph" class="barclosed creativebar">
 								<div class="creativebartext">
 									InvisionApp
 								</div>
 							</div>
 						</div>
 						<div class="barcontain">
-							<div id="indesigngraph" class="barclosed bar">
+							<div id="indesigngraph" class="barclosed creativebar">
 								<div class="creativebartext">
 									InDesign
 								</div>
 							</div>
 						</div>
 						<div class="barcontain">
-							<div id="lucidgraph" class="barclosed bar">
+							<div id="lucidgraph" class="barclosed creativebar">
 								<div class="creativebartext">
 									Lucid Charts
 								</div>
 							</div>
 						</div>
 						<div class="barcontain">
-							<div id="balsamiqgraph" class="barclosed bar">
+							<div id="balsamiqgraph" class="barclosed creativebar">
 								<div class="creativebartext">
 									Balsamiq
 								</div>
 							</div>
 						</div>
 						<div class="barcontain">
-							<div id="sketchgraph" class="barclosed bar">
+							<div id="sketchgraph" class="barclosed creativebar">
 								<div class="creativebartext">
 									Sketch 3
 								</div>
 							</div>
 						</div>
 						<div  class="barcontain">
-							<div id="illustratorgraph" class="barclosed bar">
+							<div id="illustratorgraph" class="barclosed creativebar">
 								<div class="creativebartext">
 									Illustrator
 								</div>
 							</div>
 						</div>
 						<div class="barcontain">
-							<div id="photoshopgraph" class="barclosed bar">
+							<div id="photoshopgraph" class="barclosed creativebar">
 								<div class="creativebartext">
 									Photoshop
 								</div>
@@ -138,7 +138,7 @@
 	</div>
 	<div class="row">
 		<div class="xytext">
-			<div id="creativexy" class="xtext">
+			<div id="creativex" class="xtext">
 				Experience Level
 			</div>
 		</div>
