--- a/www/views/about.html
+++ b/www/views/about.html
@@ -47,10 +47,8 @@
 	</div>
 	<div class="row" id="creativeskills">
 		<div class="col-sm-2 col-sm-offset-1">
-			<div class="xytext">
-				<div id="creativexy" class="ytext">
-					Creative Skills
-				</div>
+			<div id="creativexy" class="ytext">
+				Creative Skills
 			</div>
 		</div>
 		<div id="skillcontain" class="col-sm-6 padding0">
@@ -137,38 +135,119 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="xytext">
-			<div id="creativex" class="xtext">
-				Experience Level
-			</div>
+		<div id="creativex" class="xtext">
+			Experience Level
 		</div>
 	</div>
-	<div id="technicalskills">
-		<div class="row">
-			<div class="skillrow3">
-				<div id="html" class="skillcircle">
+	<div class="row" id="technicalskills">
+		<div class="col-sm-2 col-sm-offset-1">
+			<div id="technicalxy" class="ytext">
+				Technical Skills
+			</div>
+		</div>
+		<div id="technicalskillcontain" class="col-sm-6 padding0">
+			<div id="technicalcirlcecontain">
+				<div class="row">
+					<div class="skillrow3">
+						<div id="html" class="skillcircle">
+						</div>
+						<div id="css" class="skillcircle">
+						</div>
+						<div id="bootstrap" class="skillcircle">
+						</div>
+						<div id="javascript" class="skillcircle">
+						</div>
+						<div id="jquery" class="skillcircle">
+						</div>
+					</div>
 				</div>
-				<div id="css" class="skillcircle">
-				</div>
-				<div id="bootstrap" class="skillcircle">
-				</div>
-				<div id="javascript" class="skillcircle">
-				</div>
-				<div id="jquery" class="skillcircle">
+			<div class="row">
+				<div class="skillrow4">
+					<div id="less" class="skillcircle">
+					</div>
+					<div id="docker" class="skillcircle">
+					</div>
+					<div id="git" class="skillcircle">
+					</div>
+					<div id="angular" class="skillcircle">
+					</div>
 				</div>
 			</div>
 		</div>
-		<div class="row">
-			<div class="skillrow4">
-				<div id="less" class="skillcircle">
-				</div>
-				<div id="docker" class="skillcircle">
-				</div>
-				<div id="git" class="skillcircle">
-				</div>
-				<div id="angular" class="skillcircle">
+		<div id="technicalgraph">
+			<div class="row">
+				<div class="col-sm-12 padding0">
+					<div class="barcontain">
+						<div id="invisiongraph" class="technicalbarclosed technicalbar">
+							<div class="technicalbartext">
+								Docker
+							</div>
+						</div>
+					</div>
+					<div class="barcontain">
+						<div id="indesigngraph" class="technicalbarclosed technicalbar">
+							<div class="technicalbartext">
+								Git
+							</div>
+						</div>
+					</div>
+					<div class="barcontain">
+						<div id="lucidgraph" class="technicalbarclosed technicalbar">
+							<div class="technicalbartext">
+								LESS/SASS
+							</div>
+						</div>
+					</div>
+					<div class="barcontain">
+						<div id="balsamiqgraph" class="technicalbarclosed technicalbar">
+							<div class="technicalbartext">
+								Angular
+							</div>
+						</div>
+					</div>
+					<div class="barcontain">
+						<div id="sketchgraph" class="technicalbarclosed technicalbar">
+							<div class="technicalbartext">
+								Javascript
+							</div>
+						</div>
+					</div>
+					<div  class="barcontain">
+						<div id="illustratorgraph" class="technicalbarclosed technicalbar">
+							<div class="technicalbartext">
+								JQuery
+							</div>
+						</div>
+					</div>
+					<div  class="barcontain">
+						<div id="illustratorgraph" class="technicalbarclosed technicalbar">
+							<div class="technicalbartext">
+								Bootstrap
+							</div>
+						</div>
+					</div>
+					<div class="barcontain">
+						<div id="photoshopgraph" class="technicalbarclosed technicalbar">
+							<div class="technicalbartext">
+								CSS
+							</div>
+						</div>
+					</div>
+					<div class="barcontain">
+						<div id="photoshopgraph" class="technicalbarclosed technicalbar">
+							<div class="technicalbartext">
+								HTML
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
+		<div id="technicalgraphbottom"></div>
+	</div>
+</div>
+<div class="row">
+	<div id="technicalx" class="xtext">
+		Experience Level
 	</div>
 </div>
